@@ -9,6 +9,13 @@
 	* config.gcc: Add Epiphany RTEMS target.
 	* config/epiphany/rtems.h: New file.
 
+2014-12-03  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	* config/epiphany/epiphany.c (epiphany_override_options):
+	If TARGET_SOFT_CMPSF is not enabled, set flag_finite_math_only.
+	* config/epiphany/epiphany.md (mov<mode>cc): Don't use
+	reverse_condition_maybe_unordered if flag_finite_math_only is set.
+
 2014-04-11  Tobias Burnus  <burnus@net-b.de>
 
 	PR other/59055
